--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
 .DS_Store
 .vscode/
 .cph/
@@ -5,3 +14,4 @@
 *.exe
 *.testcases
 .editorconfig
+
